deposit/withdraw ETH/ERC20 hooks & example app

--- a/biome.json
+++ b/biome.json
@@ -14,7 +14,8 @@
       "tsconfig.*.json",
       "generated.ts",
       "pnpm-lock.yaml",
-      "bench"
+      "bench",
+      "**/.next/*"
     ]
   },
   "linter": {
