--- a/example/package.json
+++ b/example/package.json
@@ -23,6 +23,9 @@
     "tailwindcss": "^3",
     "typescript": "^5",
     "utf-8-validate": "^6.0.3",
-    "bufferutil": "^4.0.7"
+    "bufferutil": "^4.0.7",
+    "pino-pretty": "^10.2.0",
+    "encoding": "^0.1.13",
+    "lokijs": "^1.5.12"
   }
 }
