--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@changesets/cli": "^2.26.2",
     "@eth-optimism/core-utils": "^0.12.3",
     "@eth-optimism/sdk": "^3.1.2",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
     "@types/use-sync-external-store": "^0.0.3",
@@ -50,21 +51,23 @@
     "@wagmi/cli": "alpha",
     "dprint": "^0.40.2",
     "ethers": "^5.7.0",
+    "happy-dom": "^12.10.3",
     "react": "^18",
     "react-dom": "^18",
     "rimraf": "^5.0.1",
     "simple-git-hooks": "^2.9.0",
+    "typedoc": "^0.25.3",
+    "typedoc-plugin-markdown": "^3.17.0",
     "typescript": "5.0.4",
     "vitest": "^0.34.1",
-    "wagmi": "alpha",
-    "happy-dom": "^12.10.3",
-    "@testing-library/react": "^14.0.0"
+    "wagmi": "alpha"
   },
   "scripts": {
     "build": "pnpm run clean && pnpm run build:cjs && pnpm run build:esm && pnpm run build:types",
     "build:cjs": "tsc --project tsconfig.build.json --module commonjs --outDir ./dist/cjs --removeComments --verbatimModuleSyntax false && echo > ./dist/cjs/package.json '{\"type\":\"commonjs\"}'",
     "build:esm": "tsc --project tsconfig.build.json --module es2015 --outDir ./dist/esm && echo > ./dist/esm/package.json '{\"type\":\"module\",\"sideEffects\":false}'",
     "build:types": "tsc --project tsconfig.build.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
+    "generate:docs": "pnpm run typedoc",
     "release:check": "changeset status --verbose --since=origin/main",
     "release:publish": "pnpm install && pnpm build && changeset publish",
     "release:version": "changeset version && pnpm install --lockfile-only",
