--- a/package.json
+++ b/package.json
@@ -93,7 +93,7 @@
     "@tanstack/query-core": ">=5.0.0",
     "@tanstack/react-query": "beta",
     "@wagmi/core": "alpha",
-    "op-viem": "0.1.0-alpha-alpha.3",
+    "op-viem": "1.3.0-alpha",
     "typescript": ">=5.0.4",
     "viem": "2.0.0-alpha.17",
     "wagmi": "alpha"
