--- a/package.json
+++ b/package.json
@@ -90,12 +90,13 @@
     "prepare": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@eth-optimism/contracts-ts": "^0.15.0"
+    "@eth-optimism/contracts-ts": "^0.15.0",
+    "@testing-library/react-hooks": "^8.0.1"
   },
   "peerDependencies": {
     "@tanstack/query-core": ">=5.0.0",
     "@tanstack/react-query": "beta",
-    "@wagmi/core": "alpha",
+    "@wagmi/core": "2.0.0-alpha.11",
     "op-viem": "1.3.0-alpha",
     "typescript": ">=5.0.4",
     "viem": "2.0.0-alpha.17",
