--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@wagmi/core": "beta",
     "op-viem": "1.3.0-alpha",
     "typescript": ">=5.0.4",
-    "viem": "2.0.0-beta.0",
+    "viem": "beta",
     "wagmi": "beta"
   },
   "peerDependenciesMeta": {
