--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -12,6 +12,9 @@ runs:
         registry-url: https://registry.npmjs.org
         cache: pnpm
 
+    - name: Set up foundry
+      uses: foundry-rs/foundry-toolchain@v1
+
     - name: Install node modules
       run: pnpm install
       shell: bash
