--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,7 @@ jobs:
         uses: ./.github/actions/setup
 
       - name: Run tests
-        run: pnpm test:cov
+        run: CI=true pnpm test:cov
       
       # Adds coverage to github pr
       - name: 'Report Coverage'
