--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/use-sync-external-store": "^0.0.3",
     "@viem/anvil": "^0.0.6",
     "@vitest/coverage-v8": "^0.34.2",
-    "@wagmi/cli": "alpha",
+    "@wagmi/cli": "beta",
     "dprint": "^0.42.5",
     "ethers": "^5.7.0",
     "happy-dom": "^12.10.3",
