--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "typedoc-plugin-markdown": "^3.17.0",
     "typescript": "5.0.4",
     "vitest": "^0.34.1",
-    "wagmi": "beta",
+    "@testing-library/react-hooks": "^8.0.1",
     "@tanstack/react-query": ">=5.0.0"
   },
   "scripts": {
@@ -69,7 +69,7 @@
     "build:esm": "tsc --project tsconfig.build.json --module es2015 --outDir ./dist/esm && echo > ./dist/esm/package.json '{\"type\":\"module\",\"sideEffects\":false}'",
     "build:types": "tsc --project tsconfig.build.json --module esnext --declarationDir ./dist/types --emitDeclarationOnly --declaration --declarationMap",
     "generate:docs": "pnpm run typedoc",
-    "release:check": "changeset status --verbose --since=origin/main",
+    "release:check": "changeset status --verbose --since=origin/master",
     "release:publish": "pnpm install && pnpm build && changeset publish",
     "release:version": "changeset version && pnpm install --lockfile-only",
     "clean": "rimraf dist",
@@ -91,8 +91,7 @@
     "prepare": "npx simple-git-hooks"
   },
   "dependencies": {
-    "@eth-optimism/contracts-ts": "^0.15.0",
-    "@testing-library/react-hooks": "^8.0.1"
+    "@eth-optimism/contracts-ts": "^0.15.0"
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
