--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "op-wagmi",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/base-org/op-wagmi.git"
+  },
   "version": "0.0.2",
   "type": "module",
   "main": "./dist/cjs/index.js",
