--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@types/use-sync-external-store": "^0.0.3",
     "@viem/anvil": "^0.0.7",
     "@vitest/coverage-v8": "^1.2.2",
-    "@wagmi/cli": "beta",
+    "@wagmi/cli": "^2.1.1",
     "dprint": "^0.42.5",
     "ethers": "^5.7.0",
     "happy-dom": "^12.10.3",
@@ -65,7 +65,8 @@
     "typescript": "5.0.4",
     "vitest": "^1.2.2",
     "@testing-library/react-hooks": "^8.0.1",
-    "@tanstack/react-query": ">=5.0.0"
+    "@tanstack/react-query": ">=5.0.0",
+    "@wagmi/connectors": "^4.1.14"
   },
   "scripts": {
     "build": "pnpm run clean && pnpm run build:cjs && pnpm run build:esm && pnpm run build:types",
@@ -99,11 +100,11 @@
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
-    "@wagmi/core": "beta",
+    "@wagmi/core": "^2.6.5",
     "op-viem": "1.3.1-alpha",
     "typescript": ">=5.0.4",
-    "viem": "beta",
-    "wagmi": "beta"
+    "viem": "^2.7.9",
+    "wagmi": "^2.5.7"
   },
   "peerDependenciesMeta": {
     "typescript": {
