--- a/package.json
+++ b/package.json
@@ -100,11 +100,11 @@
   },
   "peerDependencies": {
     "@tanstack/react-query": ">=5.0.0",
-    "@wagmi/core": "^2.6.5",
+    "@wagmi/core": "^2.x",
     "op-viem": "1.3.1-alpha",
     "typescript": ">=5.0.4",
-    "viem": "^2.7.9",
-    "wagmi": "^2.5.7"
+    "viem": "^2.x",
+    "wagmi": "^2.x"
   },
   "peerDependenciesMeta": {
     "typescript": {
