--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "@wagmi/core": "^2.x",
     "op-viem": "1.3.1-alpha",
     "typescript": ">=5.0.4",
-    "viem": "^2.x",
+    "viem": "^2.7.11",
     "wagmi": "^2.x"
   },
   "peerDependenciesMeta": {
